--- a/build.gradle
+++ b/build.gradle
@@ -38,9 +38,13 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     annotationProcessor 'org.projectlombok:lombok'
+    testCompileOnly 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
     testImplementation 'org.springframework.security:spring-security-test'
+    // Lombok을 테스트에서도 사용할 수 있도록 추가
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
