--- a/build.gradle
+++ b/build.gradle
@@ -34,17 +34,20 @@ dependencies {
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.7'
     // Logging
     implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+    // lombok
     compileOnly 'org.projectlombok:lombok'
+    // devtool
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     annotationProcessor 'org.projectlombok:lombok'
     testCompileOnly 'org.projectlombok:lombok'
+    // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.assertj:assertj-core:3.24.0'
     // Lombok을 테스트에서도 사용할 수 있도록 추가
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
-
+    testAnnotationProcessor 'org.projectlombok:lombok'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
